force-app/main/default/objects/MUSW__Permit_Contractor__c/fields/License_No__c.field-meta.xml
<CustomField>
    <fullName>License_No__c</fullName>
    <label>License No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>