force-app/main/default/objects/MUSW__Permit_Contractor__c/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <formula>IF(TODAY() &gt; License_Expiry__c || ISNULL(License_Expiry__c), &quot;EXPIRED&quot;, &quot;LICENSED&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Status</label>
    <type>Text</type>
</CustomField>