force-app/main/default/objects/MUSW__Permit_Contractor__c/fields/MUSW__Account__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Check Contractor License Status after saving.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Permits as Contractor</relationshipLabel>
    <relationshipName>Permits_Contracted</relationshipName>
    <type>Lookup</type>
</CustomField>