force-app/main/default/objects/MUSW__Permit_Contractor__c/fields/MUSW__Contractor_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Contractor_Type__c</fullName>
    <label>Contractor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plumber</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Roofer</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
                <default>true</default>
                <label>Builder</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>