force-app/main/default/objects/MUSW__Permit_Contractor__c/fields/MUSW__Permit__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit (Deprecated)</label>
    <referenceTo>MUSW__Permit__c</referenceTo>
    <relationshipLabel>Contractors</relationshipLabel>
    <relationshipName>Contractors</relationshipName>
    <type>Lookup</type>
</CustomField>